--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
