--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
